--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">WikiCards</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="label_learning">Learning</string>
+    <string name="title_spinner">Languages</string>
+    <string name="title_fromwiki">from Wikipedia</string>
+    <string name="button_cardmode">Start to Learn</string>
+    <string name="button_stared">Stared Words</string>
+    <string name="button_downloaddb">Download Offline DB</string>
 
 </resources>
