Bug-95 select card position

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="label_license_flip_url">(<a href="https://github.com/genzeb/flip">https://github.com/genzeb/flip</a>)</string>
     <string name="label_license_picasso">picasso</string>
     <string name="label_license_picasso_url">(<a href="https://github.com/square/picasso">https://github.com/square/picasso</a>)</string>
+    <string name="label_license_androidWheel">Android Wheel Control</string>
+    <string name="label_license_androidWheel_url">(<a href="http://android-devblog.blogspot.com/2010/05/wheel-ui-contol.html">http://android-devblog.blogspot.com/2010/05/wheel-ui-contol.html</a>)</string>
     <string name="title_spinner">Languages</string>
     <string name="title_fromwiki">from Wikipedia</string>
     <string name="title_settings_activity">Settings of WikiCards</string>
